--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sitebuilder",
+  "name": "golgibunny",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,12 +10,12 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
-    "eslint": "8.45.0",
-    "eslint-config-next": "13.4.10",
-    "next": "13.4.10",
-    "postcss": "8.4.26",
+    "eslint": "8.44.0",
+    "eslint-config-next": "13.4.9",
+    "next": "^13.4.9",
+    "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3"
+    "tailwindcss": "3.3.2"
   }
 }
